# Q1_25_Builder_AhindraD

./: .gitignore  .gitmodules  Arch Diagram - PrismPapers - AhindraD.md  PrismPapers - AhindraD - Letter Of Intent.md  PrismPapers - AhindraD - User Stories Redefined Version.md  README.md
01.brige-to-turbin3_riseIn/: README.md
01.brige-to-turbin3_riseIn/airdrop/: airdrop.ts  enroll.ts  keygen.ts  package.json  transfer.ts
01.brige-to-turbin3_riseIn/airdrop/programs/: wba_prereq.ts
02.week1_prereq_web3js/airdrop/: README.md  airdrop.ts  enroll.ts  keygen.ts  package.json  private_key_convert_cli.ts  transfer.ts  tsconfig.json
02.week1_prereq_web3js/enrollment_dapp/: .gitignore  Cargo.toml  README.md
02.week1_prereq_web3js/enrollment_dapp/src/: lib.rs
02.week1_prereq_web3js/enrollment_dapp/src/programs/: Turbin3_prereq.rs
03.week2_metaplex_umi/solana-starter/ts/: README.md  package.json
03.week2_metaplex_umi/solana-starter/ts/cluster1/: nft_image.ts  nft_metadata.ts  nft_mint.ts  spl_init.ts  spl_metadata.ts  spl_mint.ts  spl_transfer.ts
04.week3_anchor_vault/anchor_vault/: .gitignore  Anchor.toml
04.week3_anchor_vault/anchor_vault/programs/anchor_vault/src/: lib.rs
